--- a/vue/package.json
+++ b/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuefullcalendar",
+  "name": "vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fullcalendar/daygrid": "^4.4.0",
-    "@fullcalendar/interaction": "^4.4.0",
-    "@fullcalendar/list": "^4.4.0",
-    "@fullcalendar/timegrid": "^4.4.0",
-    "@fullcalendar/vue": "^4.4.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vuex": "^3.1.3"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
